docker files and fix connections
