# docs/swagger.json
@@ -10,9 +10,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "article"
+                    "articles"
                 ],
-                "summary": "Get Al Articles",
+                "summary": "Get All Articles",
                 "responses": {
                     "200": {
                         "description": "OK",
